--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         }
 
         .logo-container {
-            width: 250px;
-            height: 250px;
+            width: 100%;
+            height: 100%;
             background: white;
             border-radius: 50%;
             display: flex;
@@ -69,8 +69,8 @@
         }
 
         .cards-container {
-            width: 80%;
-            max-width: 400px;
+            width: 90%;
+            height: auto;
             display: flex;
             flex-direction: column;
             gap: 30px;
@@ -431,7 +431,7 @@
             <div class="profile-circle">
                 <img src="https://an1.com/uploads/posts/2024-09/1727348015_minecraft.png" alt="Icon 2">
             </div>
-            <div class="name-text">Minecraft 1.21pe</div>
+            <div class="name-text">Minecraft 1.21PE</div>
         </a>
         
         <a href="https://getmodsapk.com/capcut-free-mod-apk/" class="card" onclick="createRipple(event, this)">
