--- a/index.html
+++ b/index.html
@@ -448,6 +448,14 @@
             <div class="name-text">Picsart 27.6.6</div>
         </a>
     </div>
+    
+    <a href="rmjio.html" class="card" onclick="createRipple(event, this)">
+    <div class="profile-circle">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Reliance_Jio_Logo.svg/1200px-Reliance_Jio_Logo.svg.png" alt="Icon 4">
+    </div>
+    <div class="name-text">Tech For Jio</div>
+</a>
+</div>
 
     <div class="footer">
         <div class="footer-content">
